--- a/www.nass.gov.ng/5e40cbf7258e008b7f0c9a31d893ce57440856aa.yml
+++ b/www.nass.gov.ng/5e40cbf7258e008b7f0c9a31d893ce57440856aa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:29:49 GMT
+    - Sun, 19 Aug 2018 11:04:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dDPmGGtWXf%2CLidtbWNudr3; path=/
+    - PHPSESSID=5nEwMUG-KF-zLeLHnesI31; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:29:49 GMT
+recorded_at: Sun, 19 Aug 2018 11:04:47 GMT
