--- a/www.nass.gov.ng/26e59e72a1af369e7c4d34a141fd6eeb20e026fc.yml
+++ b/www.nass.gov.ng/26e59e72a1af369e7c4d34a141fd6eeb20e026fc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:37:12 GMT
+    - Sun, 19 Aug 2018 11:11:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6kEXk7F5%2CLDxEKzCNYGmb0; path=/
+    - PHPSESSID=TlM0tdsE%2Cehv0BOQAk9Zh0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:37:12 GMT
+recorded_at: Sun, 19 Aug 2018 11:11:35 GMT
