--- a/www.nass.gov.ng/a8f02fbf5604200ff2e73b363b6e202d109c2bc6.yml
+++ b/www.nass.gov.ng/a8f02fbf5604200ff2e73b363b6e202d109c2bc6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:45:50 GMT
+    - Sun, 19 Aug 2018 11:18:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QekyDKcuRnKBTUQCSoJRa2; path=/
+    - PHPSESSID=l2ORv%2C7TbLGZqJjHJze1l0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:45:50 GMT
+recorded_at: Sun, 19 Aug 2018 11:18:51 GMT
