--- a/www.nass.gov.ng/4fba38d97cdc773488a617aa1bf9767e490365a3.yml
+++ b/www.nass.gov.ng/4fba38d97cdc773488a617aa1bf9767e490365a3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 00:51:22 GMT
+    - Sun, 19 Aug 2018 11:24:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1nBVWhTqRdWVqNWxnyid63; path=/
+    - PHPSESSID=MlYGSVWyl%2CP54Lr2MbCqx2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 00:51:22 GMT
+recorded_at: Sun, 19 Aug 2018 11:24:11 GMT
