--- a/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
+++ b/www.nass.gov.ng/6d28bd6854ab5ad64490a1e0d9dfa55e96cdee6e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:04:36 GMT
+    - Sun, 19 Aug 2018 11:37:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=p7MR7wHfcY%2CaDpMlbZD2e1; path=/
+    - PHPSESSID=4woleAkE-iQ8xjd1WBgLi3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:04:36 GMT
+recorded_at: Sun, 19 Aug 2018 11:37:39 GMT
