--- a/www.nass.gov.ng/eff14cf3b60553094b99f188c549abec8fc6a073.yml
+++ b/www.nass.gov.ng/eff14cf3b60553094b99f188c549abec8fc6a073.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:15:06 GMT
+    - Sun, 19 Aug 2018 11:46:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jtcKEDK%2C51Ru7KHV-7SJd0; path=/
+    - PHPSESSID=0mnIiLBbpkgWgU2XTHSpb2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:15:06 GMT
+recorded_at: Sun, 19 Aug 2018 11:46:09 GMT
