--- a/www.nass.gov.ng/0a581cbd2e00adf943da88bf4abec6b8a66698e9.yml
+++ b/www.nass.gov.ng/0a581cbd2e00adf943da88bf4abec6b8a66698e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:30:59 GMT
+    - Sun, 19 Aug 2018 12:04:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jtzZv1dIrqHVJqIaI%2CYvI0; path=/
+    - PHPSESSID=Br-AqfNRlZ1zvVrc68kCg0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:31:02 GMT
+recorded_at: Sun, 19 Aug 2018 12:04:38 GMT
