--- a/www.nass.gov.ng/84ee167bef250ec7c70ffdc4596588c55fafb916.yml
+++ b/www.nass.gov.ng/84ee167bef250ec7c70ffdc4596588c55fafb916.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:33:02 GMT
+    - Sun, 19 Aug 2018 12:06:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9w0Af%2CZJMo2B2uiHjL9IV0; path=/
+    - PHPSESSID=ALA7yWuKvDw3IFiNqx-ri3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:33:02 GMT
+recorded_at: Sun, 19 Aug 2018 12:06:10 GMT
