--- a/www.nass.gov.ng/3e060fc4c2bed1034d20a73932323b90dc28f477.yml
+++ b/www.nass.gov.ng/3e060fc4c2bed1034d20a73932323b90dc28f477.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:51:43 GMT
+    - Sun, 19 Aug 2018 12:26:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vm1TLY%2ClH9pdhPc3IBrQ73; path=/
+    - PHPSESSID=x4FsbtRdtKd-Q-riCmN7-3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:51:43 GMT
+recorded_at: Sun, 19 Aug 2018 12:26:27 GMT
