--- a/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
+++ b/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:52:32 GMT
+    - Sun, 19 Aug 2018 12:27:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Vs4ZQY19lxHZ%2CzHmCCwaQ1; path=/
+    - PHPSESSID=A7e0xl3Db-1PM%2CyRmErSY0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:52:32 GMT
+recorded_at: Sun, 19 Aug 2018 12:27:36 GMT
