--- a/www.nass.gov.ng/ac2a0384f80d7007e59e5450883b369a77c340b1.yml
+++ b/www.nass.gov.ng/ac2a0384f80d7007e59e5450883b369a77c340b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:54:09 GMT
+    - Sun, 19 Aug 2018 12:29:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zJH1qnLy5RbY0fca6ZIW30; path=/
+    - PHPSESSID=kVCOz30a5esJVugcU%2CDW12; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:54:10 GMT
+recorded_at: Sun, 19 Aug 2018 12:29:20 GMT
