--- a/www.nass.gov.ng/3498dc6b736bdd60aebf760b0f2eb6a02b5286a2.yml
+++ b/www.nass.gov.ng/3498dc6b736bdd60aebf760b0f2eb6a02b5286a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 01:57:50 GMT
+    - Sun, 19 Aug 2018 12:32:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HY0lBT8e-8ZkNK1TV9h5h3; path=/
+    - PHPSESSID=tcoP-V27LnOCw%2Cl14tx650; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 01:57:50 GMT
+recorded_at: Sun, 19 Aug 2018 12:32:11 GMT
