--- a/www.nass.gov.ng/db9b672133bc51cf6737a84f2dac2d65b09ce95f.yml
+++ b/www.nass.gov.ng/db9b672133bc51cf6737a84f2dac2d65b09ce95f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 02:06:00 GMT
+    - Sun, 19 Aug 2018 12:42:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hzRo7iSNnxyUQmRJ7hQ%2Cc1; path=/
+    - PHPSESSID=1F1Jfs9ZbEMGzAKgWEzI71; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 02:06:00 GMT
+recorded_at: Sun, 19 Aug 2018 12:42:26 GMT
