--- a/www.nass.gov.ng/780fd2618c26e2caf2208d3a8bff622ea6a21a79.yml
+++ b/www.nass.gov.ng/780fd2618c26e2caf2208d3a8bff622ea6a21a79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 02:06:53 GMT
+    - Sun, 19 Aug 2018 12:43:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DrkGfvaOIgNnZkZUf%2C9Tg2; path=/
+    - PHPSESSID=YEqJs0dq5HF-YlR%2CYe3cq0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 02:06:53 GMT
+recorded_at: Sun, 19 Aug 2018 12:43:23 GMT
