--- a/www.nass.gov.ng/62b41d3444d013b66560262296d5941bd7ddf640.yml
+++ b/www.nass.gov.ng/62b41d3444d013b66560262296d5941bd7ddf640.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 02:12:52 GMT
+    - Sun, 19 Aug 2018 12:50:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0mZMYb%2CjV-UxHrpZ%2CjF1C1; path=/
+    - PHPSESSID=RpqA89nN7hLG7CioNHii81; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 02:12:52 GMT
+recorded_at: Sun, 19 Aug 2018 12:50:05 GMT
