--- a/www.nass.gov.ng/1683933d6786e42cd88a216e30182eba1dfc6947.yml
+++ b/www.nass.gov.ng/1683933d6786e42cd88a216e30182eba1dfc6947.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 02:53:43 GMT
+    - Sun, 19 Aug 2018 13:27:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YRJjM3s37Sdp0%2CDIIxNls3; path=/
+    - PHPSESSID=3CQAiU-vZpgRcMvH4fDs11; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 02:53:43 GMT
+recorded_at: Sun, 19 Aug 2018 13:27:04 GMT
