--- a/www.nass.gov.ng/73d6f4b865677f0d5b2610a1c21e667d86708fa1.yml
+++ b/www.nass.gov.ng/73d6f4b865677f0d5b2610a1c21e667d86708fa1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 03:00:41 GMT
+    - Sun, 19 Aug 2018 13:33:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DE6KQxsijVAcG5%2CRsxM561; path=/
+    - PHPSESSID=yHCZkwpFalIeWhoLt4vKd1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 03:00:41 GMT
+recorded_at: Sun, 19 Aug 2018 13:33:29 GMT
