--- a/www.nass.gov.ng/8e67bfd43f77b468ed84d3d401bfd0e1313e6d79.yml
+++ b/www.nass.gov.ng/8e67bfd43f77b468ed84d3d401bfd0e1313e6d79.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 03:20:57 GMT
+    - Sun, 19 Aug 2018 13:52:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WNw0UDKDD6X%2CAPxssLhNN3; path=/
+    - PHPSESSID=qBR-zRcPU9-l2ZJQ-8%2C5W3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 03:20:58 GMT
+recorded_at: Sun, 19 Aug 2018 13:52:45 GMT
