--- a/www.nass.gov.ng/3cd878455db840490d5e03bc02f3b42405ada873.yml
+++ b/www.nass.gov.ng/3cd878455db840490d5e03bc02f3b42405ada873.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 03:30:48 GMT
+    - Sun, 19 Aug 2018 14:01:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aRGmgEl%2CdpXXRi2G6e8DH3; path=/
+    - PHPSESSID=rbyfB53cbMWK%2CWFABWxVJ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 03:30:48 GMT
+recorded_at: Sun, 19 Aug 2018 14:01:34 GMT
